# wild

./: .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LINKER_SCRIPT_SUPPORT.md  README.md  cackle.toml  cliff.toml  taplo.toml  test-config.toml.sample
.cargo/: config.toml.cross-ppc64le
.github/workflows/: build-images.yml  ci.yml  cron.yml  external_tests.yml  nix.yml  promote.yml  release.yml  update-nix-lockfile.yaml
benchmarks/: ryzen-9955hx.md  ryzen-9955hx.toml
benchmarks/runner/: Cargo.toml
docker/: arch-basic.Dockerfile  arch.Dockerfile  opensuse.Dockerfile
docker/ci/: alpine.Dockerfile  opensuse.Dockerfile  ubuntu-base.Dockerfile  ubuntu-cross.Dockerfile  ubuntu.Dockerfile
fakes/: ld64.ld
libwild/: Cargo.toml
libwild/src/: aarch64.rs  alignment.rs  arch.rs  args.rs  compression.rs  diagnostics.rs  diff.rs  dwarf_address_info.rs  elf.rs  elf_aarch64.rs  elf_loongarch64.rs  elf_ppc64.rs  elf_riscv64.rs  elf_writer.rs  elf_x86_64.rs  env.rs  error.rs  expression_eval.rs  file_kind.rs  file_writer.rs  fs.rs  gc_stats.rs  gdb_index.rs  grouping.rs  input_data.rs  input_section_id.rs  layout.rs  layout_rules.rs  lib.rs  linker_plugins.rs  linker_plugins_disabled.rs  linker_script.rs  macho.rs  macho_aarch64.rs  macho_object.rs  macho_stub_library.rs  macho_writer.rs  malfunction.rs  output_kind.rs  output_section_id.rs  (+20 more)
libwild/src/args/: elf.rs  macho.rs  wasm.rs
linker-diff/: Cargo.toml
linker-diff/src/: arch.rs  asm_diff.rs  colour.rs  debug_info_diff.rs  eh_frame_diff.rs  gnu_hash.rs  header_diff.rs  init_order.rs  lib.rs  ppc64.rs  riscv64.rs  riscv_attributes.rs  section_map.rs  segment.rs  symbol_diff.rs  symtab.rs  sysv_hash.rs  utils.rs  version_diff.rs  x86_64.rs
linker-layout/: Cargo.toml
linker-trace/: Cargo.toml
linker-utils/: Cargo.toml
linker-utils/src/: aarch64.rs  bit_misc.rs  elf.rs  lib.rs  loongarch64.rs  ppc64.rs  riscv64.rs  utils.rs  x86_64.rs
nix/: default.nix  nix.md  shell.nix
wild/: Cargo.toml  a.out
wild/tests/: integration_tests.rs
wild/tests/external_tests/: mold_skip_tests.toml  mold_tests.rs  taplo.toml
wild/tests/sources/: .clang-format  libc-integration.c  pack-relative-relocs-2.c  pack-relative-relocs.c  shlib-undefined-2.c  shlib-undefined-3.c  shlib-undefined.c  string_merging1.s  undefined_symbols.c  undefined_symbols.cc
wild/tests/sources/elf/abs-reloc/: abs-reloc.s
wild/tests/sources/elf/archive-activation/: archive-activation.c
wild/tests/sources/elf/as-needed-weak/: as-needed-weak.c
wild/tests/sources/elf/backtrace/: backtrace.c
wild/tests/sources/elf/call-hidden-archive/: call-hidden-archive.c
wild/tests/sources/elf/common-section/: common-section.c
(+221 files in other folders)
